# Aetherdesk-Call-Center

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT.md  AUDIT_REPORT.md  BUILD_SUMMARY.md  COMPLETE_SECURITY_REPORT.md  DEPLOYMENT.md  Dockerfile  Dockerfile.api  Dockerfile.optimized  ENTERPRISE_READINESS_BENCHMARK.md  Makefile  Modelfile.gemma3  PHASE_1_2_COMPLETION.md  PHASE_3_ASSESSMENT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_OVERVIEW.md  Procfile  READINESS_ASSESSMENT.md  README.md  alembic.ini  benchmark_perf.py  call_now.py  check_server.py  clean_start.py  cleanup.ps1  debug_api.py  debug_dashboard.txt  debug_inline.py  debug_start.py  debug_tenant.py  debug_ui.py  debug_ui_text.txt  docker-compose.yml  e2e_test.py  final_run.py  fix_db.py  fix_indent.py  (+57 more)
.github/: SECURITY.md
.github/workflows/: ci-cd.yml  codeql.yml
.opencode/agents/: production-readiness.md
.planning/codebase/: CONCERNS.md
agent-ui/: .env  .env.example  Dockerfile  README.md  SUPABASE_SETUP.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.base.json  tsconfig.json  vite.config.js  vite.config.ts
agent-ui/src/: App.jsx  App.tsx  global.d.ts  index.css  main.tsx
agent-ui/test-results/: .last-run.json
agent_scripts/: README.md  meta_sales_script.txt
agents/: README.md  __init__.py  migration-supervisor.md
alembic/: env.py
alembic/versions/: 33be689273d2_initial_schema.py  459682371cf0_manual_initial_schema.py
apps/: README.md
apps/api/: Dockerfile  fonoster_client.py  fonster_client.py  main.py  mock_voice_client.py  requirements.txt  twilio_client.py  websocket_server.py
config/: README.md  default_voice.json  pg_hba.conf  postgresql.conf  routes.json
config/database/: schema.sql
config/fonoster/: config.json
config/fonster/: config.json
config/freeswitch/: sip_profiles.xml
config/prometheus/: prometheus.yml
config/protocols/: agent_handoff_v1.json  billing_invoice_v1.json  cs_flow.json  flow.json  general_inquiry_v1.json  order_status_v1.json  pharmacy_refill_doc_v1.json  pharmacy_refill_v1.json  protocol.json  reset_v1.json  sales_flow.json  triage_v1.json
config/uploads/: cs_flow.csv  flow.csv  protocol.csv  sales_flow.csv  sample_order_status.csv
data/kb/: faq.txt
data/voice_clones/: voice_1f875a76.json  voice_37fb2e2d.json  voice_ae208247.json  voice_bc1a39f8.json  voice_dca7e5d4_temp
design-system/: DESIGN.md
dev-tools/: check_server.py  check_servers.py  debug_inline.py  full_e2e_test.py  launch.bat  playwright_setup.py  quick_start.py  restart_test.py  run.py  run_call_center.py  run_server.py  run_simple.py  run_tests.py  serve.py  start_all.py  start_and_test.py  start_api.py  start_debug.py
docs/: ARCHITECTURE.md  CALL_CENTER_TESTING_MANUAL.md  IMPLEMENTATION_PLAN_PHASE1.md  IMPLEMENTATION_PLAN_PHASE5-8.md  INTEGRATION_PLAN.md  PLATFORM_ACQUISITION_STRATEGY.md  RUNBOOKS.md
kubernetes/: backup.yml  configmap.yml  deployment.yml  gpunode.yml  monitoring.yml  namespace.yaml  services.yml  ssl.yml
models/: resource.py
plans/: README.md  agent-call-center-build.md  deployment-readiness-plan.md
scripts/: README.md  api_client.js  automate_outreach.py  benchmark_system.py  deploy.sh  deploy_gke.bat  error_handling.js  generate-sealed-secret.ps1  logger.js  session_manager.js  test_auth.py  test_call_setup.py  test_security_fixes.py  ui_components.js  validation.js  verify_fixes.sh  wizard_steps.js
scripts/dev/: check.py  start.sh
sdk/python/: setup.py
src/: validators.py
src/api/: error_handlers.py  main.py  mock_voice_client.py  requirements.txt  twilio_client.py  websocket_server.py
src/services/: logger.py
src/voice/: server.js
tests/: README.md  check_active_client.py  check_calls.py  conftest.py  eval_utils.py  load_test_api.py  stress_test.py  test_app.py  test_asr.py  test_att_simulation.py  test_db_refactor.py  test_e2e.py  test_health.py  test_integration.py  test_live_call.py  test_orchestrator.py  test_verification.py  vibeserve-integration.spec.ts
tests/ai/: test_agentic_reasoning.py
tests/chaos/: test_crm_outage.py  test_production_hardening.py
tests/cognitive/: test_sales_behavior.py
tests/e2e/: agent_workflow.spec.ts  auth.setup.ts  business-journey.spec.ts  call_center_ops_test.py  call_my_phone.py  check_llm_output.py  conftest.py  dashboard.spec.ts  debug_intent.py  direct_intent_test.py  gcloud_console_setup_test.py  gcloud_setup_test.py  gke_cluster_setup_test.py  gke_gpu_setup_test.py  global-setup.ts  login.spec.ts  navigation.spec.ts  network_errors.spec.ts  parallel_calls_test.spec.ts  test_autonomous_sales.py  test_bug_audit_and_output_grading.py  test_business_journey.py  test_chaos.py  test_customer_journey.py  test_full_coverage.py  test_functional.py  test_funnel.py  test_gdpr_compliance.py  test_human_user_journey.py  test_human_workflows.py  test_intent.py  test_mcp_integration.py  test_smoke_saas.py  test_stress.py  test_ui.py  undo_functionality.spec.ts  user-journey.spec.ts  user_journey_error_scenarios.spec.ts  visible_walkthrough.py  voice_recording_journey.py
tests/integration/: test_affiliate_funnel.py  test_compose_stack.py
tests/load/: k6_call_flow.js  k6_concurrent_calls.js
tests/services/: test_celery_tasks_unit.py  test_orchestrator_graph.py  test_orchestrator_tools.py  test_task_queue_integration.py
tests/unit/: test_actions.py  test_agent.py  test_agent_service.py  test_agent_tool_validation.py  test_agents_router.py  test_analytics_client.py  test_analytics_db.py  test_api_health.py  test_asr.py  test_audit_middleware.py  test_auth_registration.py  test_auth_service.py  test_authorization.py  test_billing.py  test_billing_engine.py  test_calls_router.py  test_campaign.py  test_campaign_leads.py  test_config.py  test_database.py  test_db_config.py  test_db_errors.py  test_db_pool.py  test_engine.py  test_gdpr_endpoints.py  test_health.py  test_integration_e2e.py  test_intent_classifier.py  test_jwt_utils.py  test_langfuse_client.py  test_leads.py  test_loader.py  test_memory.py  test_metabase_router.py  (+31 more)
(+352 files in other folders)
