[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aetherdesk"
version = "0.1.0"
description = "Voice AI agent platform with modular ASR/LLM/TTS pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AetherDesk Team", email = "team@aetherdesk.com"},
]

dependencies = [
    # Web framework
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0",

    # Database — async driver + ORM + migrations
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "sqlparse>=0.4.4",

    # Caching & session store
    "redis>=5.0.0",

    # Configuration
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=41.0.0",

    # Real-time comms
    "websockets>=12.0",
    "python-socketio>=5.10.0",
    "python-engineio>=4.8.0",

    # HTTP clients
    "httpx>=0.27.0",
    "requests>=2.31.0",

    # Speech-to-Text
    "faster-whisper>=0.10.0",
    "deepgram-sdk>=3.0.0",

    # Text-to-Speech
    "gtts>=2.3.0",
    "realtimetts>=0.6.0",
    "edge-tts>=6.1.0",

    # Telephony
    "twilio>=9.0.0",

    # AI / LLM
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "groq>=0.4.0",

    # RAG / Vector store
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",

    # Data processing
    "numpy>=1.26.0",
    "pandas>=2.0.0",

    # Background tasks
    "celery>=5.3.0",

    # Serialization
    "orjson>=3.9.0",
    "msgpack>=1.0.0",
    "protobuf>=4.24.0,<6.0.0",

    # Resilience
    "aiocircuitbreaker>=1.0.0",

    # Observability
    "prometheus-client>=0.19.0",
    "structlog>=23.0.0",
    "sentry-sdk[fastapi]>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "pytest-cov>=4.1.0",
    "playwright>=1.40.0",
    "isort>=5.12.0",
]

ml = [
    "torch>=2.1.0; platform_system != 'darwin'",
    "torchaudio>=2.1.0; platform_system != 'darwin'",
    "transformers>=4.36.0",
]

all = [
    "aetherdesk[dev,ml]",
]

[tool.uv]
exclude-newer = "2026-12-31T00:00:00Z"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=apps --cov-report=term-missing --cov-report=html"
markers = [
    "e2e_core: Core E2E tests that gate every PR (no ML dependencies, deterministic)",
    "e2e_ml: ML-dependent E2E tests run nightly with pinned scientific deps",
]

[tool.hatch.build.targets.wheel]
packages = ["apps"]

[project.urls]
Homepage = "https://github.com/ncsound919/Aetherdesk-Call-Center"
Repository = "https://github.com/ncsound919/Aetherdesk-Call-Center"
Issues = "https://github.com/ncsound919/Aetherdesk-Call-Center/issues"
